<resources>
    <string name="app_name">TokoPaerbe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_gabung_sekarang">Join Now !</string>
    <string name="string_lewati">Skip</string>
    <string name="string_selanjutnya">Next</string>
    <string name="string_masuk">Login</string>
    <string name="string_name">Name</string>
    <string name="string_iya">Yes</string>
    <string name="string_camera">Camera</string>
    <string name="string_galery">Galery</string>
    <string name="string_tidak">No</string>
    <string name="string_selesai">Done</string>
    <string name="string_belum_selesai">Pending</string>
    <string name="string_anda_yakin">Are you sure?</string>
    <string name="string_pilih_gambar">Choose Image</string>
    <string name="string_keluar_aplikasi">Want to Log Out?</string>
    <string name="string_keluar">Logout</string>
    <string name="string_daftar">Register</string>
    <string name="string_profile">Profile</string>
    <string name="string_namauser">Username</string>
    <string name="string_email">Email</string>
    <string name="string_privacy">Privacy Policy</string>
    <string name="string_email_tidak_valid">Email Is Not Valid</string>
    <string name="string_password">Password</string>
    <string name="string_helper_email">Example: test@gmail.com</string>
    <string name="string_helper_password">Minimum 8 characters &amp; unique character</string>
    <string name="string_helper_register">Or Register With</string>
    <string name="string_helper_rules"><![CDATA[By entering here, you agree to the Terms & Conditions and TokoPhincon Privacy Policy.]]></string>
    <string name="string_helper_privacy">as</string>
    <string name="string_imageuser">ImageUser</string>
    <string name="string_beranda">Home</string>
    <string name="string_toko">Store\n</string>
    <string name="string_keranjang">Wishlist</string>
    <string name="string_riwayat">Transaction</string>
    <string name="string_search">Search</string>
    <string name="en">EN</string>
    <string name="id">ID</string>
    <string name="string_empty">Empty</string>
    <string name="string_refresh">Refresh</string>
    <string name="string_connection">Connection</string>
    <string name="string_55">500</string>
    <string name="string_error_state_one">Your requested data is unavailable</string>
    <string name="string_error_state_two">Your connection is unavailable</string>
    <string name="string_error_state_three">Internal Server Error</string>
    <string name="string_reset">Reset</string>
    <string name="string_light">Light</string>
    <string name="string_dark">Dark</string>
    <string name="string_notifikasi">Notification</string>
    <string name="string_menu">Menu</string>
    <string name="string_username">Username</string>
    <string name="string_checkout">Checkout</string>
    <string name="string_pilih_pembayaran">Choose Payment Methods</string>
    <string name="string_status">Status</string>
    <string name="string_approve">approve</string>
    <string name="string_pembayaran_berhasil">Payment Success</string>
    <string name="string_beri_ulasan_product">Review Product</string>
    <string name="id_transaksi">ID Transaction</string>
    <string name="string_dummy_id">abcd-efgh-ijkl-mnop</string>
    <string name="string_berhasil">Success</string>
    <string name="string_tanggal">Datetime</string>
    <string name="string_dummy_tanggal">3 Jun 2023</string>
    <string name="string_waktu">Time</string>
    <string name="string_dummy_waktu">22:00</string>
    <string name="string_metode_pembayaran">Payment Methods</string>
    <string name="string_dummy_payment_methods">BCA Virtual Account</string>
    <string name="string_total">Total</string>
    <string name="string_dummy_total">Rp23.499.000</string>
    <string name="string_transfer_virtual_account">Transfer Virtual Account</string>
    <string name="string_transfer_bank">Bank Transfer</string>
    <string name="string_pembayaran_instan">Instan Payment</string>
    <string name="string_urutkan">Shorting</string>
    <string name="string_ulasan">Reviews</string>
    <string name="string_penjualan">Selling</string>
    <string name="string_harga_terendah">Lowest Price</string>
    <string name="string_harga_tertinggi">Highest Price</string>
    <string name="string_apple">Apple</string>
    <string name="string_asus">Asus</string>
    <string name="string_dell">Dell</string>
    <string name="string_lenovo">Lenovo</string>
    <string name="string_filter">Filter</string>
    <string name="string_harga">Price</string>
    <string name="string_terendah">Lowest</string>
    <string name="string_tertinggi">Highest</string>
    <string name="string_tampilkan_produk">Show Product</string>
    <string name="string_detail_product">Product Detail</string>
    <string name="string_dummy_harga">USD</string>
    <string name="string_dummy_description_product">Lenovo Legion 7 16 I7 11800 16GB 1TB SSD RTX3070 8GB Windows 11 QHD IPS</string>
    <string name="string_hasil_penjualan">Sold</string>
    <string name="string_desckripsi_produk">Product Description</string>
    <string name="string_this_is_description">This is description</string>
    <string name="string_ulasan_pembeli">Users Review</string>
    <string name="string_lihat_semua">Show All</string>
    <string name="string_100_pembeli_merasa_puas">100% buyers are satisfied</string>
    <string name="string_pilih_varian">Choose Varian</string>
    <string name="string_beli_langsung">Buy Now</string>
    <string name="string_dummy_user">John Doe</string>
    <string name="string_pilih_semua">Selected All</string>
    <string name="string_info">Information</string>
    <string name="string_transaksi_berhasil">Payment Succes</string>
    <string name="string_dummy_toko">ProStoreComputer</string>
    <string name="string_dummy_quantity">Item</string>
    <string name="string_total_belanja">Total Spending</string>
    <string name="string_ulas">Reviews</string>
    <string name="string_belanja">Shop</string>
    <string name="dell">Dell</string>
    <string name="string_category">Category</string>
    <string name="label">Label</string>
    <string name="dummy_item">Items</string>
    <string name="dummy_rating">5.0</string>
    <string name="dummy_soldout">Sold 10</string>
    <string name="dummy_notif">158 / 5,000 Translation results Translation result Your transaction is being processed by the seller, please wait for the next update in the application. While waiting, you can look for other items first</string>
    <string name="string_dummy_storage">16GB, 1TB SSD</string>
    <string name="string_dummy_stock">Stock</string>
    <string name="string_no_internet">No Internet</string>
    <string name="string_image_saved_to_gallery">Image saved to gallery</string>
    <string name="string_failed_to_save_image">Failed to save image</string>
    <string name="string_2_rating_2_ulasan">2 rating 2 Views</string>
    <string name="string_this_is_a_custom_toast">This is a custom Toast</string>
    <string name="string_success_login">Success Login</string>
    <string name="string_buyer_reviews">Buyer Reviews</string>
    <string name="string_success_added_to_wishlist">Success Added to Wishlist</string>
    <string name="string_success_added_to_Cart">Success Added to Cart</string>
    <string name="string_delete">Delete</string>
    <string name="string_total_bayar">Total Payment</string>
    <string name="string_cart">Cart</string>
    <string name="string_barang_yang_dibeli">Items purchased</string>
    <string name="string_pembayaran">Payment</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="string_sisa">Stock</string>
    <string name="string_success">Success</string>
    <string name="string_success_create_order">success create order</string>
    <string name="string_failed_create_order">failed create order</string>
</resources>