<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    
    <ImageView
        android:id="@+id/iv_state"
        android:layout_width="128dp"
        android:layout_height="128sp"

        android:src="@drawable/ic_error_state"/>

    <TextView
        android:id="@+id/tv_title_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_empty"
        android:layout_marginVertical="5dp"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="32sp"
        android:textColor="?attr/colorControlNormal"/>

    <TextView
        android:id="@+id/tv_description_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_error_state_one"
        android:fontFamily="@font/poppins_medium"
        android:textSize="16sp"
        android:textColor="?attr/colorControlNormal"/>

    <Button
        android:id="@+id/btn_action_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_purple"
        android:fontFamily="@font/poppins_semibold"
        android:paddingTop="10dp"
        android:layout_marginVertical="5dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="24dp"
        android:text="@string/string_reset"
        android:textSize="14sp"
        android:textColor="@color/white"/>

    

</LinearLayout>