<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginVertical="4dp"
    android:layout_marginHorizontal="16dp"
    app:cardCornerRadius="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp">

        <ImageView
            android:id="@+id/iv_shop"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="fitXY"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@drawable/ic_shop_bag"/>

        <LinearLayout
            android:id="@+id/ll_product_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_shop">

            <TextView
                android:id="@+id/tv_descripion_shop"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:text="@string/string_belanja"
                android:maxLines="1"
                android:fontFamily="@font/poppins_medium"
                android:textColor="?attr/colorControlNormal"/>

            <TextView
                android:id="@+id/tv_result_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/string_tanggal"
                android:textSize="10sp"
                android:fontFamily="@font/poppins"
                android:textColor="?attr/colorControlNormal"/>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_approved"
            android:layout_width="66dp"
            android:layout_height="20dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/secondary_purple"
            app:cardCornerRadius="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/ll_product_shop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/primary_purple"
                android:textSize="10sp"
                tools:text="@string/string_selesai" />

        </androidx.cardview.widget.CardView>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="@color/grey"
            app:layout_constraintTop_toBottomOf="@+id/ll_product_shop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_img_user"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/iv_product"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                tools:src="@drawable/img_default"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/ll_product_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="@+id/cv_img_user"
            app:layout_constraintStart_toEndOf="@+id/cv_img_user">

            <TextView
                android:id="@+id/tv_descripion_product"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                tools:text="@string/string_dummy_description_product"
                android:maxLines="1"
                android:fontFamily="@font/poppins_medium"
                android:textColor="?attr/colorControlNormal"/>

            <TextView
                android:id="@+id/tv_result_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/string_dummy_quantity"
                android:textSize="10sp"
                android:fontFamily="@font/poppins"
                android:textColor="?attr/colorControlNormal"/>

        </LinearLayout>


        <TextView
            android:id="@+id/tv_title_total_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/string_total_belanja"
            android:textSize="10sp"
            android:fontFamily="@font/poppins"
            android:layout_marginVertical="8dp"
            android:textColor="?attr/colorControlNormal"
            app:layout_constraintStart_toStartOf="@id/cv_img_user"
            app:layout_constraintTop_toBottomOf="@+id/cv_img_user"/>

        <TextView
            android:id="@+id/tv_price_total_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/string_dummy_total"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="?attr/colorControlNormal"
            app:layout_constraintStart_toStartOf="@id/cv_img_user"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_total_shop"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_review"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:backgroundTint="@color/primary_purple"
            android:fontFamily="@font/poppins_semibold"
            tools:text="@string/string_ulas"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_price_total_shop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_title_total_shop"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>