<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.feature.profile.RegisterProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/menu_toolbar"
            app:titleTextAppearance="@style/Appbartitle"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            tools:title="@string/string_profile"
            app:titleCentered="true"
            app:titleTextColor="?attr/colorControlNormal"
            app:navigationIconTint="?attr/colorControlNormal"/>

    </com.google.android.material.appbar.AppBarLayout>


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/secondary_black"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_user"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:scaleType="center"
        android:layout_marginVertical="32dp"
        android:background="@color/primary_purple"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay"
        android:layout_gravity="center"
        tools:src="@drawable/ic_person"
        android:contentDescription="@string/string_imageuser" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_user"
        app:layout_constraintStart_toStartOf="parent"
        tools:hint="@string/string_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textColorHint="?attr/colorControlNormal"
            android:textColor="?attr/colorControlNormal"
            android:fontFamily="@font/poppins_medium"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_purple"
        android:fontFamily="@font/poppins_semibold"
        android:paddingTop="10dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="24dp"
        tools:text="@string/string_selesai"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:layout_marginVertical="24sp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name_input" />

    <TextView
        android:id="@+id/tv_rules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        tools:text="@string/string_helper_rules"
        android:textColor="?attr/colorControlNormal"
        android:textSize="11sp"
        android:textAlignment="center"
        android:layout_marginVertical="24dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />


    <ProgressBar
        android:id="@+id/pb_register_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>